# dolOS

./: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  TECH_STACK.md  TEST_PLAN.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_api_log.txt
.claude/: settings.json  settings.local.json
api/: websocket.py
api/routes/: chat.py  health.py  memory.py  observability.py  skills.py  telemetry.py  v1_chat.py
channels/: __init__.py  discord_channel.py  telegram_channel.py  terminal.py
config/: mcp_servers.yaml  settings.yaml.example
core/: agent.py  alerting.py  commands.py  config.py  context_compressor.py  context_refs.py  heartbeat.py  hooks.py  llm.py  plan_mode.py  prompt_builder.py  reliability.py  task_tracker.py  telemetry.py
data/: LESSONS.md  MEMORY.md  SOUL.md  SOUL_EXAMPLE.md  USER.md
deploy/: .env.example  dolOS.service
docs/: 003_core_llm_integration.md  004_memory_system_foundation.md  005_reliability_utilities.md  008_skills_framework.md  010_observability_dashboard.md  011_tools_mcp.md  JOURNAL.md  claw-gap-analysis.md  claw-gaps-progress.md  features-assessment.md  features.md  integrations.md  manual_test_checklist.md  self-improving-agent-plan.md
docs/backlog/: 012_reinforcement_learning_lessons.md  013_dashboard_bundle_optimization.md
docs/done/: 001_observability_backend.md  002_observability_phase_b.md  006_agent_orchestrator.md  007_channel_adapters.md  (+3 more)
memory/: __init__.py  combined_extractor.py  lesson_extractor.py  memory_manager.py  search.py  semantic_extractor.py  session_kv.py  skill_extractor.py  static_loader.py  summarizer.py  transcript_index.py  user_profile_extractor.py  vector_store.py
skills/: __init__.py  bash_validator.py  executor.py  permissions.py  registry.py  sandbox.py
storage/: __init__.py  transcripts.py
tests/: conftest.py  manual_test_prompts.md  test_main_headless.py
tools/: mcp_client.py  mcp_loader.py  mcp_server.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+116 files in other folders)
